Keys mismapped when using NeoQwertz/Bone keyboard layouts under Wayland #96170

Closed
opened 2022-03-04 18:15:29 +01:00 by MultisampledNight · 11 comments

System Information
Operating system: Linux-5.16.12-zen1-1-zen-x86_64-with-glibc2.35 64 Bits
Graphics card: Mesa Intel(R) Iris(R) Plus Graphics (ICL GT2) Intel 4.6 (Core Profile) Mesa 21.3.7
Wayland compositor: Sway

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-04 12:59, hash: 1763ffa0be
Build command line: make CMAKE_CONFIG_ARGS='-DWITH_GHOST_WAYLAND=ON -DOPENGLES_EGL_LIBRARY=/usr/lib/libwayland-egl.so' release

Short description of error
I'm referring to key positions as on a standard Qwerty keyboard.
Some keys, such as 4, do nothing when typed with the NeoQwertz or Bone keyboard layouts active. Other keys, such as W or 8, are mismapped, e.g. W does the same as Backspace, 8 does the same as Tab.

Exact steps for others to reproduce the error

  • Ensure your keyboard layout is set to NeoQwertz, e.g. under Sway xkb_layout should be set to de and xkb_variant to neo_qwertz (take a look at the bottom of https://neo-layout.org/Layouts/neoqwertz/ in case you feel yourself lost)
  • Open up Blender's default scene

Select the Location X textfield in the inspector on the right and try to type 4, 8 or W.

**System Information** Operating system: Linux-5.16.12-zen1-1-zen-x86_64-with-glibc2.35 64 Bits Graphics card: Mesa Intel(R) Iris(R) Plus Graphics (ICL GT2) Intel 4.6 (Core Profile) Mesa 21.3.7 Wayland compositor: Sway **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-04 12:59, hash: `1763ffa0be` Build command line: `make CMAKE_CONFIG_ARGS='-DWITH_GHOST_WAYLAND=ON -DOPENGLES_EGL_LIBRARY=/usr/lib/libwayland-egl.so' release` **Short description of error** I'm referring to key positions as on a standard Qwerty keyboard. Some keys, such as `4`, do nothing when typed with the NeoQwertz or Bone keyboard layouts active. Other keys, such as `W` or `8`, are mismapped, e.g. `W` does the same as `Backspace`, `8` does the same as `Tab`. **Exact steps for others to reproduce the error** - Ensure your keyboard layout is set to NeoQwertz, e.g. under Sway `xkb_layout` should be set to `de` and `xkb_variant` to `neo_qwertz` (take a look at the bottom of https://neo-layout.org/Layouts/neoqwertz/ in case you feel yourself lost) - Open up Blender's default scene # Select the `Location X` textfield in the inspector on the right and try to type `4`, `8` or `W`.

Added subscriber: @multisn8-2

Added subscriber: @multisn8-2
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Does it work correctly in the text editor?

Does it work correctly in the text editor?

No, unfortunately not. From trying out spontaneously I found out that 8 seems to be mapped to Tab instead, not as my original bug report lists.

No, unfortunately not. From trying out spontaneously I found out that `8` seems to be mapped to `Tab` instead, not as my original bug report lists.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

I wasn't able to set the neo_qwertz key map, please include details for how the layout is setup/installed https://neo-layout.org/Layouts/neoqwertz/ links to a git repository with many files, it's not clear which need to be used to redo this error.

Also, it seems likely this error happens between selecting any other variant, so if this can be redone with a more standard variant, that would be helpful.

I wasn't able to set the `neo_qwertz` key map, please include details for how the layout is setup/installed https://neo-layout.org/Layouts/neoqwertz/ links to a git repository with many files, it's not clear which need to be used to redo this error. Also, it seems likely this error happens between selecting any other variant, so if this can be redone with a more standard variant, that would be helpful.

The layout seems to be included with xkb on my system, at least I didn't need to install anything additional on my system (Arch Linux) other than libinput and Sway to make it work. The following sway configuration is enough:

input type:keyboard {
	xkb_layout "de"
	xkb_variant "neo_qwertz"
}

From random testing, the important factor for the bug to occur seems to be with keyboard layouts which have more than 3 layers (in the case of de/qwertz, normal, shift and alt gr). And indeed, Tab, which is inserted on just pressing 8 in Blender, is on layer 4 on 8. Same with d, which is Backspace on layer 4.

But that doesn't happen with the CSA multilingual layout which is used in Canada, or the French BÉPO layout. I don't know any other "common" layouts with more than 3 layers, and CSA/BÉPO also "only" have 4, not 6.

(By the way, I doubt it's relevant here, on BÉPO (key positions in qwerty) Alt Gr + m popped up the quick menu, even while in the text editor. It should probably just insert q instead.)

The layout seems to be included with xkb on my system, at least I didn't need to install anything additional on my system (Arch Linux) other than libinput and Sway to make it work. The following sway configuration is enough: ``` input type:keyboard { xkb_layout "de" xkb_variant "neo_qwertz" } ``` From random testing, the important factor for the bug to occur seems to be with keyboard layouts which have more than 3 layers (in the case of de/qwertz, normal, shift and alt gr). And indeed, Tab, which is inserted on just pressing 8 in Blender, is on layer 4 on 8. Same with d, which is Backspace on layer 4. But that doesn't happen with the CSA multilingual layout which is used in Canada, or the French BÉPO layout. I don't know any other "common" layouts with more than 3 layers, and CSA/BÉPO also "only" have 4, not 6. (By the way, I doubt it's relevant here, on BÉPO (key positions in qwerty) Alt Gr + m popped up the quick menu, even while in the text editor. It should probably just insert q instead.)

This issue was referenced by fd7c070861

This issue was referenced by fd7c07086113453dc7d7c441d0d15728eccbbda3

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2022-06-28 05:49:09 +02:00

Thanks, having the sway configuration entry made it easy to redo this behavior.

Turning on num-lock caused layer-4 to be enabled, I've committed a fix that limits number lock lookups to key-pad kays.

Thanks, having the sway configuration entry made it easy to redo this behavior. Turning on num-lock caused layer-4 to be enabled, I've committed a fix that limits number lock lookups to key-pad kays.

Thank you for looking into this! This is awesome.

Thank you for looking into this! This is *awesome.*
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96170
No description provided.